# regional-rate-limiter

./: .dockerignore  .gitignore  README.md  regional-rate-limiter-design.md
design/: quotaenforcer.md  quotamgmt.md  quotaui.md
gcp/: .gitignore  MANUAL_TESTING.md  README.md
gcp/e2e/: .gitignore  conftest.py  pytest.ini  requirements.txt  run.sh
gcp/k8s/: 00-namespace.yaml  10-config.yaml  11-secret.yaml  20-db-init-job.yaml  30-quotamgmt.yaml  40-quotaenforcer.yaml  50-quotaui.yaml
gcp/scripts/: 00-preflight.sh  10-provision.sh  20-build-push.sh  30-deploy.sh  40-seed.sh  50-endpoints.sh  90-teardown.sh  demo.sh  down.sh  lib.sh  loadgen.sh  up.sh
gcp/terraform/: apis.tf  artifact_registry.tf  cloudsql.tf  gke.tf  network.tf  outputs.tf  redis.tf  terraform.tfvars.example  variables.tf  versions.tf
integration/: .gitignore  README.md  conftest.py  docker-compose.yml  pytest.ini  requirements.txt  run.sh
integration/tests/: test_config_propagation.py  test_enforcement.py  test_resolution.py  (+2 more)
proto/: README.md
quotaenforcer/: Cargo.toml  Dockerfile  MANUAL_TESTING.md  README.md  build.rs
quotaenforcer/scripts/: manual_test.sh  seed.sql
quotaenforcer/src/: config.rs  error.rs  lib.rs  main.rs  service.rs  settings.rs  store.rs  window.rs
quotaenforcer/tests/: health.rs  redis_store.rs  service_e2e.rs
quotaenforcer/tests/common/: mod.rs
quotamgmt/: Dockerfile  README.md  build.gradle  dev-principals.json  manual-verification.md  settings.gradle
quotaui/: Dockerfile  MANUAL_TESTING.md  README.md
schema/: postgres.sql  redis_scripts.lua
(+91 files in other folders)
