[package]
name = "quotaenforcer"
version = "0.1.0"
edition = "2021"
description = "Data plane (RateLimiter service) for the Regional Rate Limiter — see design/quotaenforcer.md"

[[bin]]
name = "quotaenforcer"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.12"
